--- a/index.html
+++ b/index.html
@@ -1,13 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta new="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>My First Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kamil Mytyl - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <h1>Hello, my name is Kamil</h1>
-    <p>This is my first HTML + CSS project honsted on GitHub Pages.</p>
-</body>
-</html>    
+  </head>
+  <body>
+    <div class="container">
+      <div class="left-column">
+        <img src="myphoto.jpg" alt="My photo" class="profile-pic" />
+        <div class="contact-box">
+          <h2>Contact Information</h2>
+          <p><strong>Phone:</strong> +48 693 473 094</p>
+          <p><strong>Email:</strong> szpmytyl@wp.pl</p>
+          <p><strong>Address:</strong> Palcza 86, 34-211 Budzów</p>
+        </div>
+        <div class="profile-box">
+          <h2>Professional Profile</h2>
+          <h4>
+            Technical worker with experience in the construction industry,
+            currently focused on transitioning into IT.<br /><br />
+            I have completed various courses in programming (HTML, CSS,
+            JavaScript, Java, Python), web application development, and
+            databases.<br /><br />
+            I independently build projects, develop my portfolio, and actively
+            learn front-end technologies.<br /><br />
+            I am looking for opportunities to gain my first commercial
+            experience as a Junior Developer.
+          </h4>
+        </div>
+        <div class="skills-box">
+          <h2>Skills & Experience</h2>
+          <ul>
+            <li>Basics of HTML & CSS</li>
+            <li>Basics of Java & Python</li>
+            <li>Basics of MySQL</li>
+            <li>Basics of Machine Learning</li>
+            <li>Interactive Data Visualization</li>
+            <li>Bash & Linux</li>
+            <li>Game Development in Unity (C#)</li>
+            <li>Basics of WordPress & WooCommerce</li>
+            <li>Driving License - Category B</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="right-column">
+        <header class="intro-section">
+          <h1>Hello, my name is Kamil</h1>
+          <p>This is my first HTML + CSS project hosted on GitHub Pages.</p>
+        </header>
+        <div class="main-content">
+          <h2>Work Experience</h2>
+          <h4>
+            <strong>Owner - Construction Company "KAM-BUD"</strong><br />2015 -
+            2023
+          </h4>
+          <ul>
+            <li>Renovation and finishing of apartments and houses.</li>
+            <li>Supervising work progress and direct client contact.</li>
+            <li>Installation of drywall (G-K), plastering, painting.</li>
+            <li>Carpentry and upholstery work on request.</li>
+            <li>Operating construction tools and equipment</li>
+          </ul>
+          <h4>
+            <strong>Freelance Construction & Upholstery Work</strong><br />2012
+            - 2015
+          </h4>
+          <ul>
+            <li>
+              General construction work (bricklaying, interior finishing,
+              installation)
+            </li>
+          </ul>
+
+          <h2>Education</h2>
+          <p>
+            Vocational School – KEN in Kalwaria Zebrzydowska<br />
+            Title: Certified Upholsterer
+          </p>
+
+          <h2>Courses & Training</h2>
+          <ul>
+            <li>HTML & CSS from Beginner to Expert – Udemy</li>
+            <li>WordPress + WooCommerce – Udemy</li>
+            <li>Unity Game Development in C# – Udemy</li>
+            <li>ChatGPT for Developers – Udemy</li>
+            <li>Python 3 from Zero to Expert – Udemy</li>
+            <li>Interactive Data Visualization in Python – Udemy</li>
+            <li>Bash & Linux Command Line – Udemy</li>
+            <li>Intro to Statistics with Python – Udemy</li>
+            <li>ML Bootcamp in Python – Udemy</li>
+            <li>MySQL from Basics – Udemy</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
