--- a/index.html
+++ b/index.html
@@ -6,58 +6,64 @@
   <title>CV Kamil Mytyl</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; color: #333; }
-    .language-switch { float: right; }
     .section { margin-bottom: 30px; }
     h1, h2, h4 { margin: 0 0 10px; }
-    .hidden { display: none; }
+    ul { padding-left: 20px; }
   </style>
 </head>
 <body>
-  <div class="language-switch">
-    <button onclick="setLanguage('pl')">Polski</button>
-    <button onclick="setLanguage('en')">English</button>
+  <h1>Cześć, mam na imię Kamil</h1>
+  <h4>To jest mój pierwszy projekt HTML + CSS opublikowany na GitHub Pages.</h4>
+
+  <div class="section">
+    <h2>Dane kontaktowe</h2>
+    <ul>
+      <li><strong>Telefon:</strong> 693 473 094</li>
+      <li><strong>Email:</strong> szpmytyl@wp.pl</li>
+      <li><strong>Adres:</strong> Palcza 86, 34-211 Budzów</li>
+    </ul>
   </div>
 
-  <div id="pl">
-    <h1>Cześć, mam na imię Kamil</h1>
-    <h4>To jest mój pierwszy projekt HTML + CSS opublikowany na GitHub Pages.</h4>
-
-    <div class="section">
-      <h2>Doświadczenie zawodowe</h2>
-      <h4>Właściciel firmy budowlanej "KAM-BUD" (2015 – 2023)</h4>
-      <ul>
-        <li>Remonty i wykończenia mieszkań</li>
-        <li>Nadzór nad pracami i kontakt z klientem</li>
-        <li>Montaż płyt G-K, szpachlowanie, malowanie, tynkowanie</li>
-        <li>Prace stolarskie i tapicerskie</li>
-        <li>Obsługa narzędzi i sprzętu budowlanego</li>
-      </ul>
-    </div>
+  <div class="section">
+    <h2>Profil zawodowy</h2>
+    <p>Pracownik techniczny z doświadczeniem w branży budowlanej. 
+        Obecnie skoncentrowany na przebranżowieniu do IT. 
+        Ukończyłem wiele kursów z zakresu programowania (HTML, CSS, JavaScript, Java, Python), 
+        tworzenia aplikacji webowych oraz baz danych. Samodzielnie tworzę projekty,
+         rozwijam portfolio i aktywnie uczę się technologii frontendowych. 
+         Szukam możliwości zdobycia pierwszego komercyjnego doświadczenia jako Junior Developer.</p>
   </div>
 
-  <div id="en" class="hidden">
-    <h1>Hello, my name is Kamil</h1>
-    <h4>This is my first HTML + CSS project hosted on GitHub Pages.</h4>
-
-    <div class="section">
-      <h2>Work Experience</h2>
-      <h4>Owner of construction company "KAM-BUD" (2015 – 2023)</h4>
-      <ul>
-        <li>Renovation and finishing of apartments</li>
-        <li>Supervision and client communication</li>
-        <li>Drywall installation, plastering, painting</li>
-        <li>Carpentry and upholstery work</li>
-        <li>Operating construction tools and equipment</li>
-      </ul>
-    </div>
+  <div class="section">
+    <h2>Umiejętności i doświadczenie</h2>
+    <ul>
+      <li>Podstawy HTML i CSS</li>
+      <li>Podstawy Java i Python</li>
+      <li>Podstawy MySQL</li>
+      <li>Podstawy uczenia maszynowego (Machine Learning)</li>
+      <li>Interaktywna wizualizacja danych</li>
+      <li>Bash i Linux</li>
+      <li>Tworzenie gier w Unity (język C#)</li>
+      <li>Podstawy WordPress i WooCommerce</li>
+      <li>Prawo jazdy kat. B</li>
+    </ul>
   </div>
 
-  <script>
-    function setLanguage(lang) {
-      document.getElementById('pl').classList.add('hidden');
-      document.getElementById('en').classList.add('hidden');
-      document.getElementById(lang).classList.remove('hidden');
-    }
-  </script>
+  <div class="section">
+    <h2>Doświadczenie zawodowe</h2>
+    <h4>Właściciel firmy budowlanej "KAM-BUD" (2015 – 2023)</h4>
+    <ul>
+      <li>Remonty i wykończenia mieszkań</li>
+      <li>Nadzór nad pracami i kontakt z klientem</li>
+      <li>Montaż płyt G-K, szpachlowanie, malowanie, tynkowanie</li>
+      <li>Prace stolarskie i tapicerskie</li>
+      <li>Obsługa narzędzi i sprzętu budowlanego</li>
+    </ul>
+
+    <h4>Prace budowlane i tapicerskie – freelancer (2012 – 2015)</h4>
+    <ul>
+      <li>Prace ogólnobudowlane (murowanie, wykończenia, montaż)</li>
+    </ul>
+  </div>
 </body>
 </html>
