Dodano link do CV (PDF)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
           <p><strong>Telefon:</strong> +48 693 473 094</p>
           <p><strong>Email:</strong> szpmytyl@wp.pl</p>
           <p><strong>Adres:</strong> Palcza 86, 34-211 Budzów</p>
+          <p>
+            <strong>CV (PDF):</strong>
+            <a href="cv_kamil.pdf" download>Pobierz</a>
+          </p>
+          
         </div>
         <div class="profile-box">
           <h2>Profil zawodowy</h2>
